--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "morgan": "^1.9.0",
+    "sqlite3": "^3.1.13",
     "webpack": "^3.5.5"
   }
 }
