--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chai": "^4.1.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "map-obj": "^3.0.0",
     "mocha": "^5.2.0",
     "morgan": "^1.9.1",
     "react": "^15.6.1",
@@ -29,6 +30,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "webpack": "^3.5.5"
+    "webpack": "^4.26.0",
+    "webpack-cli": "^3.1.2"
   }
 }
